fix: homepage alignment

--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@ a:hover {
 	position: fixed !important;
 	top: 50%;
 	left: 50%;
-	margin: 205px 0 0 -230px !important;
+	margin: 205px 0 0 -180px !important;
 }
 #main-nav > li > a {
 	display:none;
